--- a/templates/admin/addbanner.html
+++ b/templates/admin/addbanner.html
@@ -51,6 +51,76 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- <script defer src="https://cdn.crop.guide/loader/l.js?c=VCWTKR"></script> -->
+    <!-- <script defer src="https://cdn.crop.guide/loader/l.js?c=FRXJZV"></script> -->
+
+    <script>
+        console.log('hello world')
+const alertBox = document.getElementById('alert-box')
+const imageBox = document.getElementById('image-box')
+const imageForm = document.getElementById('form')
+const confirmBtn = document.getElementById('confirm-btn')
+const input = document.getElementById('id_product_image')
+
+const csrf = document.getElementsByName('csrfmiddlewaretoken')
+
+input.addEventListener('change', ()=>{
+    alertBox.innerHTML = ""
+    confirmBtn.classList.remove('not-visible')
+    const img_data = input.files[0]
+    const url = URL.createObjectURL(img_data)
+
+    imageBox.innerHTML = `<img src="${url}" id="image" width="700px">`
+    var $image = $('#image')
+    console.log($image)
+
+    $image.cropper({
+        aspectRatio: 4 / 4,
+        crop: function(event) {
+            
+        }
+    });
+    
+    var cropper = $image.data('cropper');
+    confirmBtn.addEventListener('click', (e)=>{
+        e.preventDefault();
+        var v = cropper.getCroppedCanvas()
+        cropper.getCroppedCanvas().toBlob((blob) => {
+            console.log(blob)
+            console.log(typeof(blob))
+
+            console.log('confirmed')
+            const fd = new FormData(imageForm);
+            fd.append('csrfmiddlewaretoken', csrf[0].value)
+            fd.append('file', blob, 'my-image.png');
+            
+            $.ajax({
+
+                type:'POST',
+                url: '',
+                enctype: 'multipart/form-data',
+                data: fd,
+                success: function(response){
+                    console.log('success', response)
+                    alertBox.innerHTML = `<div class="alert alert-success" role="alert">
+                                            Successfully saved and cropped the selected image
+                                        </div>`
+                    location.href= "/customize/product/"
+                    
+                },
+                error: function(error){
+                    console.log('error', error)
+                    alertBox.innerHTML = `<div class="alert alert-danger" role="alert">
+                                            Ups...something went wrong
+                                        </div>`
+                },
+                cache: false,
+                contentType: false,
+                processData: false,
+            })
+        })
+    })
+})
+    </script>
+    
   </body>
 </html>
