--- a/templates/admin/orderview.html
+++ b/templates/admin/orderview.html
@@ -23,8 +23,7 @@
         </div>
 
         <div class="items">
-            <li><i class="fa-solid fa-chart-line"></i></i><a href="#">Dashboard</a></li>
-            <li><i class="fa-regular fa-address-card"></i><a href="#">Profile</a></li>
+            <li><i class="fa-solid fa-chart-line"></i></i><a href="admin_home">Dashboard</a></li>
             <li><i class="fa-solid fa-users"></i><a href="{% url 'user_management' %}">Users</a></li>
             <li><i class="fa-brands fa-product-hunt"></i><a href="{% url 'product_management' %}">Products</a></li>
             <li><i class="fa-solid fa-boxes-stacked"></i><a href="{% url 'category_management' %}">Category</a></li>
@@ -63,7 +62,7 @@
                       <th>Product </th>
                       <th>Image</th>
                       <th>Quantity</th>
-                      <th>Amount</th>
+                      <th>Address</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -73,7 +72,10 @@
                       <td>{{i.pid.pname}}</td>
                       <td><img width="90px" height="90px"   src="{{i.pid.image.url}}" alt=""></td>
                       <td>{{i.quantity}}</td>
-                      <td>{{i.oid.aid.hname}}</td>
+                      <td>{{i.oid.aid.hname}},{{i.oid.aid.hno}},<br>
+                        {{i.oid.aid.street}},{{i.oid.aid.district}},<br>
+                        Pincode: {{i.oid.aid.pincode}}
+                      </td>
                     </tr> 
                     {% endfor %}  
                   </tbody>
