--- a/templates/user/orderhistory.html
+++ b/templates/user/orderhistory.html
@@ -111,8 +111,23 @@
     </tbody>
   </table>
 </div>
-  </div>
 </div>
+<br></br/>
+<!-- Pagination -->
+{% if orders.has_previous %}
+<a href="?page=1">&laquo; First</a>
+<a href="?page={{ orders.previous_page_number }}">Previous</a>
+{% endif %}
+
+Page {{ orders.number }} of {{ orders.paginator.num_pages }}
+
+{% if orders.has_next %}
+<a href="?page={{ orders.next_page_number }}">Next</a>
+<a href="?page={{ orders.paginator.num_pages }}">Last &raquo;</a>
+{% endif %}                
+
+</div>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> 
