--- a/templates/admin/ordermanagement.html
+++ b/templates/admin/ordermanagement.html
@@ -39,7 +39,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <img src="" alt="">
                     <form action="order_management">
-                    <input type="text" name="search" placeholder="Search">
+                    <input value="{{keyword}}" type="text" name="search" placeholder="Search">
                     </form>
                 </div>   
             </div>
