--- a/templates/user/userprofile.html
+++ b/templates/user/userprofile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Account Settings UI Design</title>
+	<title>Account</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -55,10 +55,10 @@
 							<i class="fa fa-tv text-center mr-1"></i> 
 							Address
 						</a>
-						<a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
+						<!-- <a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
 							<i class="fa fa-bell text-center mr-1"></i> 
 							Notification
-						</a>
+						</a> -->
 					</div>
 				</div>
 				
@@ -176,7 +176,7 @@
 						</div> -->
 						<button class="btn btn-primary">Update</button>
 						</form><br>
-						<form action="/mobile_otp" method="POST">
+						<!-- <form action="/mobile_otp" method="POST">
 							{% csrf_token %}
 						<h3 class="mb-4">Update Phone</h3>
 						<div class="row">
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<button class="btn btn-primary">Update</button>
-						</form>
+						</form> -->
 					</div>
 					<div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="application-tab">
 					
