--- a/templates/user/productpage.html
+++ b/templates/user/productpage.html
@@ -36,6 +36,7 @@
                             </ul>
                         </li>
                         <!-- Search bar -->
+                        form
                         <div class="input-group">
                             <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                             <button type="button" class="btn btn-outline-primary">search</button>
