--- a/templates/admin/adminhome.html
+++ b/templates/admin/adminhome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Management</title>
+    <title>Admin Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
@@ -47,7 +47,43 @@
             </div>
         </div>
     <div class="container">
-        <div class="col-md-10">
+        <div class="col-md-12">
+
+            {% if messages %}
+            <ul class="messages">
+            {% for message in messages %}
+            <li style="list-style-type: none;" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+            </ul>
+            <script>
+            setTimeout(function() {
+            var messages = document.querySelector(".messages");
+            messages.style.display = "none";}, 3000);
+            </script>
+           {% endif %} 
+
+            <div class="col-12 mt-3 mb-5">
+                <form method="post" action="{% url 'salesreport' %}">
+                  {% csrf_token %}
+                  <div class="row mx-auto">
+                    <div class="col-auto mt-1">
+                      <b>Sales Report:</b>
+                    </div>
+                    <div class="col-auto p-0">
+                      <input type="date" class="form-control" placeholder="Input 1" name="fromdate" required >
+                    </div>
+                    <div class="col-auto">
+                      <input type="date" class="form-control" placeholder="Input 2" name="todate" required>
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" name="pdf" class="btn btn-primary">Download PDF</button>
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" name="excel" class="btn btn-secondary">Download Excel</button>
+                    </div>
+                  </div>
+                </form>
+            </div>
 
        
         <div>
@@ -60,16 +96,17 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
+        const total_orders = "{{ context.total_orders |safe }}";
         const ctx = document.getElementById('myChart');
       
         new Chart(ctx, {
           type: 'bar',
           data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green'],
+            labels:  ['Jan','Feb','Mar', 'Apr', 'May', 'June', 'July', 'Aug', 'Sep','Oct','Nov', 'Dec'] ,
             datasets: [{
               label: 'Total Sales',
-              data: [12, 19, 3, 5, 2, 3],
-              borderWidth: 01,
+              data:  total_orders ,
+              borderWidth: 1,
               borderColor:'black',
               backgroundColor:['#9ca19d'],
             }]
@@ -83,7 +120,5 @@
           }
         });
       </script>
-
-
 </body>
 </html>
