--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -42,13 +42,13 @@
                 <span>Sub Total</span>
                 <strong>₹{{i.ctid.total}}</strong>
               </li> -->
-              {% if comp %}
+              {% if coup == None %}
               <li class="list-group-item d-flex justify-content-between bg-light">
                 <div class="text-success">
                   <h6 class="my-0">Coupon Discount</h6>
                   <small></small>
                 </div>
-                <span class="text-success">- ₹{{cprice}}</span>
+                <span class="text-success">- ₹0</span>
               </li>
               {% else %}
               <li class="list-group-item d-flex justify-content-between bg-light">
@@ -56,7 +56,7 @@
                   <h6 class="my-0">Coupon Discount</h6>
                   <small></small>
                 </div>
-                <span class="text-success">- ₹0</span>
+                <span class="text-success">- ₹{{cprice}}</span>
               </li>
               {% endif %}
               <li class="list-group-item d-flex justify-content-between">
@@ -67,13 +67,21 @@
             </ul>
       
             <form action="checkout" class="card p-2">
-                
-              <div class="input-group">
-                <input type="text" name="coupcode" class="form-control" placeholder="Coupon Code">
+               {% if coup == None %}
+               <div class="input-group">
+                <input type="text" name="coupcode" value="" class="form-control" placeholder="Coupon Code">
                 <div class="input-group-append">
                   <button type="submit" class="btn btn-secondary">Apply</button>
                 </div>
               </div>
+               {% else %} 
+              <div class="input-group">
+                <input type="text" name="coupcode" value="{{coup}}" class="form-control" placeholder="Coupon Code">
+                <div class="input-group-append">
+                  <button type="submit" class="btn btn-secondary">Apply</button>
+                </div>
+              </div>
+              {% endif %}
             </form>
           </div>
           <div class="col-md-8 order-md-1">
@@ -96,10 +104,7 @@
                   </div>
                 </div>
               </div>
-      
-              
-      
-              <div class="mb-3">
+               <div class="mb-3">
                 <label for="email">Street <span class="text-muted"></span></label>
                 <input type="text" class="form-control" name="add_street" id="email" placeholder="">
                 <div class="invalid-feedback">
@@ -150,25 +155,13 @@
                     }, 5000);
                 </script>
             {% endif %}
-
-              <!-- <hr class="mb-4">
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="same-address">
-                <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
-              </div>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="save-info">
-                <label class="custom-control-label" for="save-info">Save this information for next time</label>
-              </div>
-              <hr class="mb-4"> -->
               <button class="btn btn-primary btn-lg btn-block" type="submit">Add</button><br><br>
-              <!-- <a href="" class="btn btn-primary md-sm">Add</a><br><br> -->
             </form>
             <h4 class="mb-3">Select Address</h4>
             <hr class="mb-4">
             {% for x in address %}
             <div class="form-check">
-                <input class="form-check-input" value="{{x.addressid}}" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <input class="form-check-input" value="{{x.addressid}}" type="radio" checked name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
                   {{x.hname}},{{x.hno}},{{x.street}},{{x.district}},{{x.state}},{{x.pincode}}
                 </label>
@@ -176,7 +169,6 @@
             {% endfor %}
             <br><br><h4 class="mb-3">Payment</h4>
             <hr class="mb-4">
-              <!-- <button class="btn btn-primary btn-lg btn-block" type="submit">Place Order</button> -->
               <a href="{% url 'cash_on_delivery' %}?total_amount={{total_amount}}" class="btn btn-primary md-sm">Cash On Delivery</a><br><br>
 
               <!-- Paypal Integration Starts Here -->
