--- a/templates/user/orderhistory.html
+++ b/templates/user/orderhistory.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -17,21 +18,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="{% url 'productpage' %}">Shop</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">All Products</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        {% for i in cat%}
-                        <li><a class="dropdown-item" href="#!">{{i.cname}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </li>
                 <!-- Search bar -->
-                <div class="input-group">
-                    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                    <button type="button" class="btn btn-outline-primary">search</button>
+                <form action="order_history">
+                  <div class="input-group">
+                      <input name="search" id="search" type="text" value="{{keyword}}" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />       
                   </div>
+                  </form>
                 <!-- Search bar ends -->
             </ul>
             <form class="d-flex">
