--- a/templates/user/ordersuccessfull.html
+++ b/templates/user/ordersuccessfull.html
@@ -26,9 +26,19 @@
           </ul>
         </div>
       </nav>
-      <div class="py-5 text-center d-flex justify-content-bet align-items-center flex-row"> 
-      <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_p1laie4m.json"  background="transparent"  speed=".75"  style="width: 300px; height: 300px;"    autoplay></lottie-player>
-      <h3 class="text-muted">Order Placed Successfully</h3>
+      <div class="untree_co-section" style="padding: 4rem;">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center" style="align-content: center;">
+              <div class="d-flex justify-content-center">
+                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_p1laie4m.json"  background="transparent"  speed=".75"  style="width: 300px; height: 300px;"    autoplay></lottie-player>
+              </div>
+              <h2 class="display-3 text-black">Thank you!</h2>
+              <h3 class="text-muted">Order Placed Successfully.</h3>
+              <p><a href="{% url 'homepage' %}" class="btn btn-info">Return to Home</a></p>
+            </div>
+          </div>
+        </div>
       </div>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
