--- a/templates/user/productpage.html
+++ b/templates/user/productpage.html
@@ -14,6 +14,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+       
     </head>
     <body>
         <!-- Navigation-->
@@ -36,11 +37,12 @@
                             </ul>
                         </li>
                         <!-- Search bar -->
-                        form
-                        <div class="input-group">
-                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                            <button type="button" class="btn btn-outline-primary">search</button>
-                          </div>
+                        
+                        <form action="productpage">
+                            <div class="input-group">
+                                <input name="search" id="search" type="text" value="{{keyword}}" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />       
+                            </div>
+                            </form>
                         <!-- Search bar ends -->
                     </ul>
                     <form class="d-flex">
@@ -52,13 +54,11 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a href="{% url 'userprofile' %}" class="dropdown-item">My Profile</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#!">Cart</a></li>
+                                <li><a class="dropdown-item" href="{% url 'cart' %}">Cart</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#!">Wishlist</a></li>
+                                <li><a class="dropdown-item" href="{% url 'order_history' %}">Orders</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#!">Orders</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#!">Log Out</a></li>
+                                <li><a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a></li>
                             </ul>
                         </li>
                     </form>
