--- a/templates/admin/bannermanagement.html
+++ b/templates/admin/bannermanagement.html
@@ -37,8 +37,8 @@
                 <div class="search">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <img src="" alt="">
-                    <form action="product_management">
-                    <input name="search" type="text" placeholder="Search">
+                    <form action="banner_management">
+                    <input name="search" value="{{keyword}}" type="text" placeholder="Search">
                   </form>
                 </div>   
             </div>
