--- a/templates/user/category.html
+++ b/templates/user/category.html
@@ -14,8 +14,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/static/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
        
     </head>
     <body>
@@ -32,10 +30,10 @@
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'productpage' %}">All Products</a></li>
-                                <li><hr class="dropdown-divider"/></li>
+                                <li><hr class="dropdown-divider" /></li>
                                 {% for i in cat%}
                                 <li><a class="dropdown-item" href="{% url 'cat_sort' %}?cat_id={{i.categoryid}}">{{i.cname}}</a></li>
-                                {% endfor %}
+                                {% endfor %} 
                             </ul>
                         </li>
                         <!-- Search bar -->
@@ -64,7 +62,7 @@
                                 <li><a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a></li>
                             </ul>
                         </li>
-                    {% else %}
+                        {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -80,60 +78,26 @@
         </nav>
         <!-- Nav bar ends -->
         <!-- Section-->
-        {% if not details %}
-        <div class="untree_co-section" style="padding: 4rem;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 mb-5 text-center" style="align-content: center;">
-                        <div class="d-flex justify-content-center">
-                            <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_xqrgqono.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
+                    {% if not pro %}
+                    <div class="untree_co-section" style="padding: 4rem;">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-md-12 text-center" style="align-content: center;">
+                              <div class="d-flex justify-content-center">
+                                <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_xqrgqono.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-player>
+                              </div>
+                              <br><h2 class="display-3 text-black">Sorry!</h2>
+                              <br><h3 class="text-muted">Products Not Found</h3>
+                              <!-- <p><a href="{% url 'homepage' %}" class="btn btn-info">Return to Home</a></p> -->
+                            </div>
+                          </div>
                         </div>
-                        <br><h2 class="display-3 text-black">Product Not Found!</h2>
                     </div>
-                </div>
-            </div>
-        </div>
-    {% else %}
-        <div class="container mt-2">
-        <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Filter <i class="fa-solid fa-filter"></i></button></div>
-
-        <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-        <div class="offcanvas-header">
-            <h5 id="offcanvasTopLabel">Filter by Price</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <div class="mt-2 row g-3">
-                <div class="col-auto">
-                    <form class="row g-3" method="post" action="{% url 'productpage' %}">
-                        {% csrf_token %}
-                        <div class="col-auto">
-                            <div class="input-group">
-                                <h5>Price Range:- </h5>
-                                <input type="number" class="form-control-sm rounded-end" id="min_price" name="min" value="{{min}}"
-                                    placeholder="From">
-                            </div>
-                        </div>
-                        
-                        <div class="col-auto">
-                            <div class="input-group">
-                                <input type="number" class="form-control-sm rounded-end" id="max_price" name="max" value="{{max}}"
-                                    placeholder="To">
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" name="filter" class="btn btn-outline-dark">Filter</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        </div>
-   
+                    {% else %}
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4">
-                    {% for i in details %}
+                    {% for i in pro %}
                     <div class="col mb-5">
                         
                         <div class="card h-100">
@@ -159,20 +123,7 @@
                     {% endfor %}
                     {% endif %}
                 </div>
-                  <!-- Pagination -->
-            {% if details.has_previous %}
-            <a href="?page=1">&laquo; First</a>
-            <a href="?page={{ details.previous_page_number }}">Previous</a>
-          {% endif %}
-
-          Page {{ details.number }} of {{ details.paginator.num_pages }}
-
-          {% if details.has_next %}
-            <a href="?page={{ details.next_page_number }}">Next</a>
-            <a href="?page={{ details.paginator.num_pages }}">Last &raquo;</a>
-          {% endif %}
             </div>
-          
         </section>
         <!-- Footer-->
         <footer class="py-2 bg-dark">
@@ -188,7 +139,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
