--- a/templates/user/landingpage.html
+++ b/templates/user/landingpage.html
@@ -26,6 +26,16 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'landingpage' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" href="{% url 'productpage' %}">Shop</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#!">All Products</a></li>
+                                <li><hr class="dropdown-divider" /></li>
+                                {% for i in cat%}
+                                <li><a class="dropdown-item" href="{% url 'cat_sort' %}?cat_id={{i.categoryid}}">{{i.cname}}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
                         <!-- Search bar -->
                         <form action="landingpage">
                         <div class="input-group">
@@ -67,6 +77,20 @@
         {% endfor %}
         <!-- Header ends -->
         <!-- Section-->
+        {% if not details %}
+            <div class="untree_co-section" style="padding: 4rem;">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 mb-5 text-center" style="align-content: center;">
+                            <div class="d-flex justify-content-center">
+                                <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_xqrgqono.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+                            </div>
+                            <br><h2 class="display-3 text-black">Product Not Found!</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% else %}
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4">
@@ -95,6 +119,7 @@
                         </div> 
                     </div>
                     {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </section>
@@ -114,5 +139,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </body>
 </html>
